resources/nginx-service/overlays/dev/nginx-service-ingress-kustomize.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service
  namespace: core
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # This should match the IngressClass for NGINX
  rules:
  - host: nginx.local.m-mobility.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
